<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/tabber">

        <ImageView
            android:id="@+id/detail_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:alpha="0.8"
            android:src="@drawable/btn_back" />


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/detail_info"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/detail_tv" />

    <EditText
        android:id="@+id/detail_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/nickname"
        android:maxLines="1"
        android:textColorHint="@color/hint_text_color" />



    <EditText
        android:id="@+id/detail_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/describe"
        android:maxLines="1"
        android:textColorHint="@color/hint_text_color" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/detail_area"
            android:layout_width="0dp"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:text="@string/area"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textColor="@color/hint_text_color" />

        <TextView
            android:id="@+id/detail_select_area"
            android:layout_width="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:text="@string/select_area"
            android:maxLength="15"
            android:maxLines="1"
            android:textSize="20sp"

            />

    </LinearLayout>
    <Button
        android:id="@+id/detail_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:alpha="0.9"
        android:background="@drawable/sp_unfocus"
        android:text="@string/sure"
        android:textColor="@color/bg_text_color" />
    <ProgressBar
        android:id="@+id/detail_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>

