<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/scroll">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/tabber">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:alpha="0.8"
            android:id="@+id/phone_register_back"
            android:src="@drawable/btn_back" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/phone_register"
        android:textSize="20sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/phone_login_tip"
         />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/tel"
        android:maxLines="1"
        android:maxLength="11"
        android:inputType="number"
        android:id="@+id/phone_register_phone"
        android:textColorHint="@color/hint_text_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/phone_register_core"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/core"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1"
            android:textColorHint="@color/hint_text_color" />

        <Button

            android:id="@+id/phone_register_obtain_core"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:textColor="@color/bg_text_color"
            android:text="@string/obtain_core"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="33dp"
            android:background="@drawable/sl_bg_login"
            android:button="@null" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/phone_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:maxLines="1"
            android:password="true"
            android:maxLength="16"
            android:textColorHint="@color/hint_text_color" />

        <CheckBox

            android:id="@+id/phone_register_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="33dp"
            android:background="@drawable/sl_password"
            android:button="@null" />
    </RelativeLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:alpha="0.9"
        android:id="@+id/phone_login_sure"
        android:background="@drawable/sp_unfocus"
        android:text="@string/sure"
        android:textColor="@color/bg_text_color" />
</LinearLayout>
</ScrollView>
