<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.isabella.dechat.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/tabber">

        <ImageView
            android:id="@+id/login_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:alpha="0.8"
            android:src="@drawable/btn_back" />

        <TextView
            android:id="@+id/login2register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/register"
            android:textColor="@color/bg_text_color" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/user_login"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/login_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/phone_email"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="11"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorHint="@color/hint_text_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="16"
            android:maxLines="1"
            android:password="true"
            android:textColorHint="@color/hint_text_color" />

        <CheckBox

            android:id="@+id/login_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="33dp"
            android:background="@drawable/sl_password"
            android:button="@null" />
    </RelativeLayout>

    <Button
        android:id="@+id/login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:alpha="0.9"
        android:background="@drawable/sp_unfocus"
        android:text="@string/login"
        android:textColor="@color/bg_text_color" />

    <TextView
        android:id="@+id/login2phone_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/phone_login"
        android:textColor="@color/hint_text_color" />

    <ProgressBar
        android:id="@+id/login_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp" />
    <!--<android.support.design.widget.CoordinatorLayout-->
        <!--android:id="@+id/container"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom"/>-->
</LinearLayout>
