<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.isabella.dechat.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/tabber">

        <ImageView
            android:id="@+id/login_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:alpha="0.8"
            android:src="@drawable/btn_back" />

        <TextView
            android:id="@+id/register2login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/login"
            android:textColor="@color/bg_text_color" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/user_register"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/register_tip" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/register_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rigister_rb_boy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:background="@drawable/sl_boy"
                android:button="@null" />

            <RadioButton
                android:id="@+id/rigister_rb_girl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/sl_girl"
                android:button="@null" />
        </RadioGroup>
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        android:scaleType="fitXY"
        android:src="@drawable/picker_up_line_bg" />

    <com.example.horizontalselectedviewlibrary.HorizontalselectedView
        android:id="@+id/register_hd"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:HorizontalselectedViewSeesize="5"
        app:HorizontalselectedViewSelectedTextColor="@color/tabber"
        app:HorizontalselectedViewSelectedTextSize="60"
        app:HorizontalselectedViewTextColor="@color/hint_text_color"
        app:HorizontalselectedViewTextSize="40" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:scaleType="fitXY"
        android:src="@drawable/picker_down_line_bg" />

    <Button
        android:id="@+id/register_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:alpha="0.9"
        android:background="@drawable/sp_unfocus"
        android:text="@string/sure"
        android:textColor="@color/bg_text_color" />


</LinearLayout>
